@@ -1,0 +1,29 @@
+ORBit2
+eel
+glade
+glibmm
+gtkmm
+gnome-common
+gnome-mome-data
+gnome-vfs
+libIDL
+libart_lgpl
+libbonobo
+libbonoboui
+audiofile
+seahorse-plugins
+esound
+libgnomeuimm
+libgnomecanvas
+libgnomecups
+libgnomeprint
+libgnomeprintui
+liboobs
+librsvg
+libsigc++2
+libxml++
+pygobject
+pygtk
+pygtksourceview
+pyorbit
+totem-pl-parser
